# rtrt

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  deny.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  coverage.yml  deny.yml  perf.yml  release.yml
crates/rtrt-cli/: Cargo.toml
crates/rtrt-cli/src/: doctor.rs  main.rs  proxy_stats.rs  security.rs  service.rs  setup.rs
crates/rtrt-cli/tests/: cli.rs
crates/rtrt-compress/: Cargo.toml
crates/rtrt-compress/benches/: compress_bench.rs
crates/rtrt-compress/benches/fixtures/: code.md  long.md  mixed.md  short.md
crates/rtrt-compress/examples/: compress_savings.rs
crates/rtrt-compress/src/: lib.rs  llm.rs  ml.rs  ml_onnx.rs  secrets.rs  treesitter.rs
crates/rtrt-core/: Cargo.toml
crates/rtrt-core/src/: config.rs  detect.rs  error.rs  lib.rs  output_style.rs  plugin.rs  project.rs  token.rs
crates/rtrt-dashboard/: Cargo.toml
crates/rtrt-dashboard/src/: assets.rs  daemons.rs  main.rs  prelude.rs  routes.rs  state.rs  tests.rs  transcripts.rs  util.rs
crates/rtrt-dashboard/src/handlers/: chat.rs  compress.rs  config.rs  limits.rs  memgraph.rs  memory.rs  mod.rs  ollama.rs  orch.rs  projects.rs  prompts.rs  savings.rs  scope.rs  security.rs  statusline.rs  templates.rs  usage.rs
crates/rtrt-dashboard/ui/: index.html
crates/rtrt-dashboard/ui/assets/: styles.css
crates/rtrt-dashboard/ui/assets/js/: api.js  app.js  components.js  pages.js
crates/rtrt-eval/: Cargo.toml
crates/rtrt-eval/fixtures/: compress_smoke.json  recall_smoke.json
crates/rtrt-eval/src/: bertscore.rs  lib.rs  main.rs
crates/rtrt-mcp/: Cargo.toml
crates/rtrt-mcp/src/: main.rs
crates/rtrt-memory/: Cargo.toml
crates/rtrt-memory/benches/: recall_bench.rs
crates/rtrt-memory/src/: embed.rs  hnsw_index.rs  lib.rs  payload.rs  summarise.rs
crates/rtrt-providers/: Cargo.toml
crates/rtrt-providers/src/: anthropic.rs  context7.rs  gateway.rs  gateway_server.rs  invoke.rs  lib.rs  openai.rs  openai_compatible.rs  router.rs  stream.rs  usage.rs  usage_ledger.rs
crates/rtrt-providers/tests/: gateway_ledger.rs
crates/rtrt-proxy/: Cargo.toml
crates/rtrt-proxy/src/: cargo.rs  containers.rs  generic.rs  git.rs  kubernetes.rs  lib.rs  node.rs
crates/rtrt-proxy/tests/: filters.rs
crates/rtrt-proxy/tests/fixtures/: cargo_test_fail.txt  cargo_test_pass.txt  git_diff.txt  git_diff_u10.txt  rg_heading.txt  rg_no_heading.txt
crates/rtrt-security/: Cargo.toml
crates/rtrt-security/profiles/: ai-default.toml  ai-strict.toml  asvs-l2.toml  cis-baseline.toml  nist-ssdf.toml  owasp-top-10.toml
crates/rtrt-security/src/: engine.rs  finding.rs  lib.rs  profile.rs  runner.rs
crates/rtrt-security/src/engines/: ai.rs  deps.rs  licenses.rs  mod.rs  patterns.rs  secrets.rs
crates/rtrt-templates/: Cargo.toml
crates/rtrt-templates/src/: builtin.rs  chains.rs  custom.rs  lib.rs  project.rs  prompts.rs  render.rs
docs/: ARCHITECTURE.ko.md  ARCHITECTURE.md  CHANGELOG.ko.md  CODE_OF_CONDUCT.ko.md  COMPARISON.ko.md  COMPARISON.md  CONTRIBUTING.ko.md  DESIGN.ko.md  FEATURES.ko.md  FEATURES.md  INSPIRATION.ko.md  INSPIRATION.md  INSTALL.ko.md  INSTALL.md  PERF.ko.md  PERF.md  README.ko.md  SECURITY.ko.md  USAGE.ko.md  USAGE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress.rs  redact.rs
packaging/homebrew/: README.md  rtrt.rb
plugins/claude-code/rtrt/: README.md
plugins/claude-code/rtrt/.claude-plugin/: plugin.json
plugins/claude-code/rtrt/hooks/: _common.sh  notification.sh  post_tool_use.sh  post_tool_use_failure.sh  post_user_prompt_submit.sh  pre_compact.sh  pre_tool_use.sh  session_end.sh  session_start.sh  stop.sh  subagent_start.sh  subagent_stop.sh  user_prompt_submit.sh
scripts/: bench.sh  perf-gate.sh  smoke.sh
