[workspace]
resolver = "3"
members = [
    "crates/rtrt-core",
    "crates/rtrt-compress",
    "crates/rtrt-proxy",
    "crates/rtrt-memory",
    "crates/rtrt-providers",
    "crates/rtrt-mcp",
    "crates/rtrt-dashboard",
    "crates/rtrt-cli",
    "crates/rtrt-templates",
    "crates/rtrt-eval",
    "crates/rtrt-security",
]
# `fuzz/` is a cargo-fuzz crate that depends on libfuzzer-sys; keep it out of
# the workspace so a default `cargo build` doesn't drag nightly-only deps in.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Kim DaeHyun <kernalix7@kodenet.io>"]
license = "MIT"
repository = "https://github.com/kernalix7/rtrt"
homepage = "https://github.com/kernalix7/rtrt"
description = "RTRT — Rust-based Token Reduction Toolkit for AI agents"
readme = "README.md"

[workspace.dependencies]
rtrt-core = { path = "crates/rtrt-core", version = "0.1.0" }
rtrt-compress = { path = "crates/rtrt-compress", version = "0.1.0" }
rtrt-proxy = { path = "crates/rtrt-proxy", version = "0.1.0" }
rtrt-memory = { path = "crates/rtrt-memory", version = "0.1.0" }
rtrt-providers = { path = "crates/rtrt-providers", version = "0.1.0" }
rtrt-templates = { path = "crates/rtrt-templates", version = "0.1.0" }
rtrt-security = { path = "crates/rtrt-security", version = "0.1.0" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "io-util", "fs", "net", "signal", "sync", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
regex = "1"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
walkdir = "2"
dirs = "5"
criterion = { version = "0.5", features = ["html_reports"] }
eventsource-stream = "0.2"
futures-util = "0.3"
mockito = "1"
fastembed = "5"
rmcp = "1"
schemars = "0.8"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
instant-distance = "0.6"
handlebars = "6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig", "esaxx_fast"] }
ndarray = "0.17"
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
