[package]
name = "rtrt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT command-line entry point."

[[bin]]
name = "rtrt"
path = "src/main.rs"

[dependencies]
rtrt-core.workspace = true
rtrt-compress.workspace = true
rtrt-proxy.workspace = true
rtrt-memory.workspace = true
rtrt-providers.workspace = true
rtrt-templates.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
