[package]
name = "rtrt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT command-line entry point."

[[bin]]
name = "rtrt"
path = "src/main.rs"

[dependencies]
rtrt-core.workspace = true
rtrt-compress = { workspace = true, features = ["llm-compress", "treesitter"] }
rtrt-proxy.workspace = true
rtrt-memory = { workspace = true, features = ["llm", "ollama-embed"] }
rtrt-providers.workspace = true
rtrt-templates.workspace = true
rtrt-security.workspace = true
clap.workspace = true
futures-util = { workspace = true }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[features]
default = []
# Forwards to `rtrt-compress/onnx` so `rtrt compress --ml --onnx-model …` can
# load a real LLMLingua-2-style scorer instead of the heuristic.
onnx = ["rtrt-compress/onnx"]
