[package]
name = "rtrt-compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT output compression engine (caveman-style terse mode)."

[dependencies]
rtrt-core.workspace = true
regex.workspace = true
once_cell.workspace = true
serde.workspace = true
async-trait.workspace = true
rtrt-providers = { workspace = true, optional = true }

[features]
default = []
# Enables LlmCompressor — caveman-class compression by routing the passage
# through any rtrt-providers Provider (Anthropic / OpenAI / Ollama-compatible).
# Off by default so the workspace builds without pulling reqwest into the
# compression dep tree for users who only need the rule pass.
llm-compress = ["dep:rtrt-providers"]

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "compress_bench"
harness = false

[[example]]
name = "compress_savings"
path = "examples/compress_savings.rs"
