[package]
name = "rtrt-compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT output compression engine (caveman-style terse mode)."

[dependencies]
rtrt-core.workspace = true
regex.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
rtrt-providers = { workspace = true, optional = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[features]
default = []
# Enables LlmCompressor — caveman-class compression by routing the passage
# through any rtrt-providers Provider (Anthropic / OpenAI / Ollama-compatible).
# Off by default so the workspace builds without pulling reqwest into the
# compression dep tree for users who only need the rule pass.
llm-compress = ["dep:rtrt-providers"]
# Enables tree-sitter-based signature extraction. The current build ships a
# Rust grammar (`tree-sitter-rust`); other languages can be added by enabling
# their grammar crate alongside.
treesitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
]
# Enables `OnnxImportance` — real LLMLingua-2-style token-importance scoring
# via an ONNX-runtime session + HuggingFace tokenizer. Requires the user to
# provide both files on disk (no model auto-download). Uses `ort`'s
# `load-dynamic` so the ONNX Runtime shared library is resolved at runtime.
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "compress_bench"
harness = false

[[example]]
name = "compress_savings"
path = "examples/compress_savings.rs"
