[package]
name = "rtrt-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT web dashboard — token savings, recall stats, provider routing."

[[bin]]
name = "rtrt-dashboard"
path = "src/main.rs"

[dependencies]
rtrt-core.workspace = true
rtrt-compress = { workspace = true, features = ["treesitter"] }
rtrt-memory.workspace = true
rtrt-proxy.workspace = true
rtrt-templates.workspace = true
rtrt-providers.workspace = true
uuid.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs.workspace = true
