[package]
name = "rtrt-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT MCP server (stdio + HTTP/SSE)."

[[bin]]
name = "rtrt-mcp"
path = "src/main.rs"

[dependencies]
rtrt-core.workspace = true
rtrt-compress = { workspace = true, features = ["treesitter"] }
rtrt-memory.workspace = true
rtrt-proxy.workspace = true
rtrt-providers.workspace = true
rtrt-templates.workspace = true
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
axum.workspace = true
schemars = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
async-trait.workspace = true
uuid.workspace = true
