[package]
name = "rtrt-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT persistent memory store with hybrid recall (BM25 + vector + graph)."

[dependencies]
rtrt-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
