[package]
name = "rtrt-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT persistent memory store with hybrid recall (BM25 + vector + graph)."

[dependencies]
rtrt-core.workspace = true
rusqlite.workspace = true
regex.workspace = true
sha2.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
fastembed = { workspace = true, optional = true }
rtrt-providers = { workspace = true, optional = true }
instant-distance = { workspace = true, optional = true }

[features]
default = []
# Pulls in fastembed (ONNX runtime + model download on first use). Off in CI by
# default so the workspace builds without a network round-trip; opt-in for users
# and the `cargo test --features embeddings` lane.
embeddings = ["dep:fastembed"]
# Enables LlmSummariser, which wraps any rtrt-providers Provider (Anthropic /
# OpenAI / OpenAI-compatible — including a local Ollama server) for memory
# extraction and compression. The trait shape is always available so callers
# can plug in their own backend.
llm = ["dep:rtrt-providers"]
# Enables `HnswIndex` for sub-linear approximate-nearest-neighbour recall.
# Without it `recall_vector` falls back to a project-scoped O(n) cosine sweep
# which is fine for a few thousand memories but starts costing real time
# beyond ~50k.
hnsw = ["dep:instant-distance"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "recall_bench"
harness = false
