[package]
name = "rtrt-templates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTRT standardized project templates (built-in + custom)."

[dependencies]
rtrt-core.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
toml = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
handlebars = { workspace = true }
async-trait.workspace = true
rtrt-providers = { workspace = true, optional = true }

[features]
default = []
# Enables `chains::PromptChain` — sequential prompt composition that routes
# each step through a `rtrt_providers::Provider` and threads the previous
# step's output into the next via `{{previous}}`.
chains = ["dep:rtrt-providers"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
